# Teamack

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
.github/workflows/: checksums.yml  release.yml
apps/desktop/: pubspec.yaml
apps/desktop/lib/: main.dart
apps/desktop/lib/screens/: explore_screen.dart  feed_screen.dart  profile_screen.dart
apps/headless/: Cargo.toml
apps/mobile/: pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/lib/screens/: groups_screen.dart  pages_screen.dart
apps/mobile/lib/services/: sovr_api.dart
bridges/flutter/: bridge.rs
crates/sovr-core/: Cargo.toml
crates/sovr-core/src/: lib.rs
crates/sovr-feed/: Cargo.toml
crates/sovr-feed/src/: lib.rs
crates/sovr-graph/: Cargo.toml
crates/sovr-graph/src/: lib.rs
crates/sovr-groups/: Cargo.toml
crates/sovr-groups/src/: lib.rs
crates/sovr-media/: Cargo.toml
crates/sovr-media/src/: lib.rs
crates/sovr-moderation/: Cargo.toml
crates/sovr-moderation/src/: lib.rs
crates/sovr-pages/: Cargo.toml
crates/sovr-pages/src/: lib.rs
crates/sovr-profile/: Cargo.toml
crates/sovr-profile/src/: lib.rs
docs/: GETTING_STARTED.md  INSTALL.md
docs/offline/: FAQ.md  Privacy.md  UserGuide.md
scripts/: install.ps1  install.sh  package_appimage.sh  package_macos.sh  package_windows.ps1
src/: commons.js  crypto.js  messages.js
test/: crypto.test.js  messages.test.js
tools/image_upscaler/: README.md  upscale.py
tools/packer/: build.sh
