[package]
name = "sovr-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
parking_lot = "0.12"

sovr-graph = { path = "../sovr-graph" }
sovr-profile = { path = "../sovr-profile" }
sovr-feed = { path = "../sovr-feed" }
sovr-pages = { path = "../sovr-pages" }
sovr-groups = { path = "../sovr-groups" }
sovr-moderation = { path = "../sovr-moderation" }

[lib]
name = "sovr_core"
path = "src/lib.rs"
